Verif/Test/Invalide/test_erreur_3.72-2.deca
// Description:
//    Programme soulevant l'erreur (3.72)
// Resultats:
//    Erreur contextuelle
//    Ligne 14 : Les types 'int' et 'type_null' sont incompatibles avec l'opérateur binaire '*' (règle 3.72)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 14/01/2012

int var;
{
   var = 1 * null;
}